@@ -1,6 +1,7 @@
 v3.4.0 (2021.01.xx)
   - Add "Export discovery diagnostic data" PVR Client Specific setting
   - Change "DVR stream read operation minimum size" advanced option to default to "Automatic" and allow for an updated range of 4KiB to 64KiB
+  - Add "HEVC Channels" channel group
 
 v3.3.4 (2020.12.09)
   - Update SQLite database engine to version 3.34.0
